fix: components with overflow text

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -14,6 +14,7 @@
     align-items: center;
     justify-content: center;
     margin: 2px;
+    text-align: center;
     text-transform: uppercase;
     background: transparent;
     border-radius: rem(22px);
