--- a/src/components/room-info/room-info.scss
+++ b/src/components/room-info/room-info.scss
@@ -1,5 +1,6 @@
 .room-info {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-end;
   justify-content: space-between;
 
